# VersionClimber

./: .gitignore  .readthedocs.yaml  .travis.yml  README.rst  README.txt  TODO.rst  TODO.txt  metainfo.ini  pyproject.toml  setup.py  travis.yml
.github/workflows/: conda-package-build.yml  openalea_ci.yml
algo/180621/: README.bac2  packageversions.bac2
conda/: meta.yaml
doc/: Makefile  conf.py  contents.rst  environment.yml  index.rst  make.bat
doc/user/: autosum.rst  index.rst
docker/: Dockerfile
example/: config.yaml  fluid.py  hierarchic.py  liquidparser.py  myconfig.py  run.py  test_yaml.py  tutorial.py
example/tuto01/: config.yaml  test_function.py  tuto01.py  tuto2.py
example/tuto02/: config.yaml  estimate_hog.py  run_vclimb.py  tuto2.py
example/tuto03/: config.yaml  result1.txt  result2.txt  test_function.py
example/tuto10/: README.rst  conf.yaml  config.yaml  estimate_hog.py
example/tuto11/: config.yaml  estimate_hog.py
example/tuto_conda01/: README.md  config.yaml  test_function.py
example/tuto_ligo/: config.yaml  config_cise.yaml  config_commit.yaml
example/tuto_phenome/: README.md  config.yaml  config2.yaml  environment.yml
example/tuto_usecase1/: config.yaml
example/wip/: config.yaml  params.py  plot_digits_classification.py
test/: config.yaml  config2.yaml  demo.py  foobar  my_client.py  my_server.py  reduceconfig.py  task3.py  test_adel.py  test_climber.py  test_conda.py  test_conda_version.py  test_demandsupply.py  test_hierachical_versions.py  test_import.py  test_pypi.py  test_reduceconfig.py  test_scikits.py  test_vclimb.py  test_version_compatibility.py  toto.txt
test/wip/: demo.py  (+7 more)
versionclimber/: client.py  conda_version.py  config.py  filterconfig.py  liquid.py  liquidparser.py  liquidparser_pessimistic.py  message.py  multigit.py  reduceconfig.py  server.py  test_client.py  test_server.py  testc.py  tests.py  utils.py  vclimb.py  version.py
vflexql/: liquid.py  liquidparser.py  liquidparser_pessimistic.py  utils.py
(+30 files in other folders)
